--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <p>Zodiac killing...<p>
 					</div>
 
+          <div id="introtext">
+            <p>Is Ted Cruz the Zodiac Killer?</p>
+          </div>
+
 					<div id="allimages">
 						<img class="cruzodiacimages" id="cruzodiacimage1" src="" width="12800" height="480">
 						<img class="cruzodiacimages" id="cruzodiacimage2" src="" width="12800" height="480">
