--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Is Ted Cruz the Zodiac Killer?</title>
         <meta name="description" content="Is Ted Cruz the Zodiac Killer?">
         <meta name="author" content="Charlotte Trible, adapted from Eel Slap by Per Stenius - http://www.perstenius.com">
+        <meta name="keywords" content="ted cruz, zodiac killer, conspiracy, mouse, move">
 
         <!-- Mobile Specific Metas
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -35,8 +36,8 @@
 
     <body>
 
-    	<!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>obsolete</strong> browser. Please upgrade your browser already.</p>
         <![endif]-->
 
 
@@ -44,7 +45,7 @@
 
     <div class="wrapper">
 
-      <h1>Is Ted Cruz the Zodiac Killer?</h1>
+      <!-- <h1>Is Ted Cruz the Zodiac Killer?</h1> -->
 
   		<div id="cruzodiacgame">
 				<!-- CRUZODIAC -->
