--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 
       <!-- <h1>Is Ted Cruz the Zodiac Killer?</h1> -->
 
-  		<div id="cruzodiacgame">
+  		<!-- <div id="cruzodiacgame"> -->
 				<!-- CRUZODIAC -->
 				<div id="cruzodiaccontainer" class="cruzodiac">
 
           <div id="loader">
-            <p>Zodiac killing...<p>
+            Zodiac killing...
 					</div>
 
           <div id="introtext">
-            <p>Is Ted Cruz the Zodiac Killer?</p>
+            Is Ted Cruz the Zodiac Killer?
           </div>
 
 					<div id="allimages">
@@ -68,7 +68,7 @@
 
 				</div>
 				<!-- CRUZODIAC -->
-  		</div>
+  		<!-- </div> -->
 
     </div>
 
