--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Mobile Specific Metas
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
         <!-- FONT
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,7 +43,7 @@
 
 		<!-- Primary Page Layout –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <div class="wrapper">
+    <!-- <div class="wrapper"> -->
 
       <!-- <h1>Is Ted Cruz the Zodiac Killer?</h1> -->
 
@@ -70,7 +70,7 @@
 				<!-- CRUZODIAC -->
   		<!-- </div> -->
 
-    </div>
+    <!-- </div> -->
 
 
 		<!-- End Document –––––––––––––––––––––––––––––––––––––––––––––––––– -->
