--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Scripts
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="js/cruzodiac.js"></script>
     </head>
