--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-        <!-- FONT
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-
         <!-- CSS
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="stylesheet" href="css/normalize.css">
@@ -29,7 +25,6 @@
 
         <!-- Scripts
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="js/cruzodiac.js"></script>
     </head>
@@ -54,6 +49,21 @@
 					</div>
 
 				</div>
+
+        <div class="footer">
+          <picture>
+            <img
+              sizes="(max-width: 2rem) 100vw, 2rem"
+              srcset="
+              img/mark_gaqgy8_c_scale,w_200.png 200w,
+              img/mark_gaqgy8_c_scale,w_651.png 651w,
+              img/mark_gaqgy8_c_scale,w_970.png 970w,
+              img/mark_gaqgy8_c_scale,w_1400.png 1400w"
+              src="img/mark_gaqgy8_c_scale,w_1400.png"
+              alt="">
+          </picture>
+          <a href="wizardparty.club">Wizard Party dot Club</a>
+        </div>
 
 
 		<!-- End Document –––––––––––––––––––––––––––––––––––––––––––––––––– -->
