--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
         <div class="footer">
           <picture>
             <img
-              sizes="(max-width: 2rem) 100vw, 2rem"
+              sizes="(max-width: 200px) 100vw, 2rem"
               srcset="
-              img/mark_gaqgy8_c_scale,w_200.png 200w,
-              img/mark_gaqgy8_c_scale,w_651.png 651w,
-              img/mark_gaqgy8_c_scale,w_970.png 970w,
-              img/mark_gaqgy8_c_scale,w_1400.png 1400w"
-              src="img/mark_gaqgy8_c_scale,w_1400.png"
-              alt="">
+              img/mark_50.png 50w,
+              img/mark_200.png 200w"
+              src="img/mark_200.png"
+              alt="Charlotte Trible mark">
           </picture>
-          <a href="wizardparty.club">Wizard Party dot Club</a>
+          <a href="http://wizardparty.club">Wizard Party dot Club</a>
         </div>
 
 
