--- a/index.html
+++ b/index.html
@@ -51,16 +51,25 @@
 				</div>
 
         <div class="footer">
-          <picture>
-            <img
-              sizes="(max-width: 200px) 100vw, 2rem"
-              srcset="
-              img/mark_50.png 50w,
-              img/mark_200.png 200w"
-              src="img/mark_200.png"
-              alt="Charlotte Trible mark">
-          </picture>
-          <a href="http://wizardparty.club">Wizard Party dot Club</a>
+
+          <div class="business">
+            <a href="https://wizard.business/">
+              <picture>
+                <img
+                  sizes="(max-width: 200px) 100vw, 2rem"
+                  srcset="
+                  img/mark_50.png 50w,
+                  img/mark_200.png 200w"
+                  src="img/mark_200.png"
+                  alt="Charlotte Trible mark">
+              </picture>
+            </a>
+          </div>
+
+          <div class="party">
+            <a href="http://wizardparty.club">Wizard Party dot Club</a>
+          </div>
+
         </div>
 
 
